--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+
+        <!-- The Modal -->
+        <div id="myModal" class='modal'>
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+            </div>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
