--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
             <h1>Matching Game</h1>
         </header>
 
+        <div id="myModal" class="modal">
+                <!-- Modal content -->
+            <div class="modal-content">
+                <div class=finalMessage>
+                    <p class="message"></p>
+                    <i class="fa fa-repeat tryAgain modal-restart"></i>
+                    <span class="close">&times;</span>
+                </div>
+                
+                <div class="stats">
+                    <div class="finalStars">Score :  <span class="finalScore"></span></div>
+                    <div>Time : <span class="timeTaken"></span></div>
+                    <div>Moves : <span class="finalMoves"></span></div>
+                </div>
+            </div>
+        </div>
+
         <section class="score-panel">
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
@@ -22,10 +39,10 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0</span><span class="moveSpan"> Moves</span>
             <span id="timer">00:00</span>
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
+        		<i class="fa fa-repeat tryAgain"></i>
         	</div>
         </section>
 
@@ -81,13 +98,7 @@
         </ul>
 
         <!-- The Modal -->
-        <div id="myModal" class='modal'>
-            <!-- Modal content -->
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
-            </div>
-        </div>
+        
     </div>
 
     <script src="js/app.js"></script>
