--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span><span class="moveSpan"> Moves</span>
+        	<span class="moves">0</span><span class="move-span"> Moves</span>
             <span id="timer">00:00</span>
             <div class="restart">
         		<i class="fa fa-repeat tryAgain"></i>
